tests/snapshots/main__cargo_mutants_in_relative_dependency_tree_passes.snap
---
source: tests/main.rs
expression: stdout
---
Found 7 mutants to test
ok       Unmutated baseline
7 mutants tested: 7 caught
