tests/snapshots/main__mutants.json.snap
---
source: tests/main.rs
expression: mutants_json
---
[
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "main",
      "return_type": "",
      "span": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 5,
          "column": 2
        }
      }
    },
    "span": {
      "start": {
        "line": 2,
        "column": 5
      },
      "end": {
        "line": 4,
        "column": 6
      }
    },
    "replacement": "()",
    "genre": "FnValue"
  },
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "start": {
          "line": 7,
          "column": 1
        },
        "end": {
          "line": 13,
          "column": 2
        }
      }
    },
    "span": {
      "start": {
        "line": 12,
        "column": 5
      },
      "end": {
        "line": 12,
        "column": 6
      }
    },
    "replacement": "0",
    "genre": "FnValue"
  },
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "start": {
          "line": 7,
          "column": 1
        },
        "end": {
          "line": 13,
          "column": 2
        }
      }
    },
    "span": {
      "start": {
        "line": 12,
        "column": 5
      },
      "end": {
        "line": 12,
        "column": 6
      }
    },
    "replacement": "1",
    "genre": "FnValue"
  },
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "start": {
          "line": 7,
          "column": 1
        },
        "end": {
          "line": 13,
          "column": 2
        }
      }
    },
    "span": {
      "start": {
        "line": 10,
        "column": 11
      },
      "end": {
        "line": 10,
        "column": 13
      }
    },
    "replacement": "+=",
    "genre": "BinaryOperator"
  },
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "start": {
          "line": 7,
          "column": 1
        },
        "end": {
          "line": 13,
          "column": 2
        }
      }
    },
    "span": {
      "start": {
        "line": 10,
        "column": 11
      },
      "end": {
        "line": 10,
        "column": 13
      }
    },
    "replacement": "/=",
    "genre": "BinaryOperator"
  }
]
